// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalArrow /> snapshot should match snapshot 1`] = `
<ModalArrow
  placement="bottom"
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg"
    data-placement="bottom"
    height={12}
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="primary"
    />
  </svg>
</ModalArrow>
`;

exports[`<ModalArrow /> snapshot should match snapshot with aira-hidden 1`] = `
<ModalArrow
  aria-hidden="true"
  placement="bottom"
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg"
    data-placement="bottom"
    height={12}
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="primary"
    />
  </svg>
</ModalArrow>
`;

exports[`<ModalArrow /> snapshot should match snapshot with className 1`] = `
<ModalArrow
  className="example-class"
  placement="bottom"
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg example-class"
    data-placement="bottom"
    height={12}
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="primary"
    />
  </svg>
</ModalArrow>
`;

exports[`<ModalArrow /> snapshot should match snapshot with color 1`] = `
<ModalArrow
  color="quaternary"
  placement="bottom"
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg"
    data-placement="bottom"
    height={12}
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="quaternary"
    />
  </svg>
</ModalArrow>
`;

exports[`<ModalArrow /> snapshot should match snapshot with id 1`] = `
<ModalArrow
  id="example-id"
  placement="bottom"
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg"
    data-placement="bottom"
    height={12}
    id="example-id"
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="primary"
    />
  </svg>
</ModalArrow>
`;

exports[`<ModalArrow /> snapshot should match snapshot with style 1`] = `
<ModalArrow
  placement="bottom"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <svg
    aria-hidden="true"
    className="md-modal-arrow-svg"
    data-placement="bottom"
    height={12}
    style={
      Object {
        "color": "pink",
      }
    }
    viewBox="0 0 24 12"
    width={24}
    xmlns="http://www.w3.org/svg/2000"
  >
    <defs>
      <clipPath
        id="modal-arrow-cut-stroke-bottom"
      >
        <path
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
        />
      </clipPath>
    </defs>
    <path
      clipPath="url(#modal-arrow-cut-stroke-bottom)"
      d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
      data-color="primary"
    />
  </svg>
</ModalArrow>
`;
